2009-03-20 Albert Chu <chu11@llnl.gov>

	* man/powerman-devices.7.in: Re-add IPMI/ipmipower section.
	Update with new FreeIPMI information and troubleshooting
	information.
	
2009-03-17 Albert Chu <chu11@llnl.gov>

	* man/powerman.dev.5.in: Fix spelling typo (seperated -> separated).
	
2009-03-09 Jim Garlick <garlick@llnl.gov>

	* scripts/powerman.init.in : Change log_init() message on Red Hat
	from e.g. "Starting Powerman: powermand" to "Starting Powerman: ",
	per chaos bug 710.

2009-02-25 Jim Garlick <garlick@llnl.gov>

	* etc/lom.dev : Added initial support for Sun LOM.

	* test/t51, test/lom.c : Test for above.

2009-02-12 Jim Garlick <garlick@llnl.gov>

	* etc/bashfun.dev : Small tweak to get working on AIX.

2009-02-09 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.3.4

2009-01-30 Jim Garlick <garlick@llnl.gov>

	* etc/powerman.dev : Revert change on 2008-04-25 to drop status_all.
	Document that master must powerman.conf control all the plugs in
	the slave powerman.conf's.

	* test/t36 : Alter test to check that a remapped superset works,
	not a subset.

2009-01-26 Jim Garlick <garlick@llnl.gov>

	* etc/bashfun.dev : This wasn't working.  Simplify and fix prompt
	expects so they don't depend on root's prompt initially being a '#'.

	* test/t50 : New test for above.

	* test/Makefile.am : Add -L to cli target so we can find libpowerman.

2009-01-20 Jim Garlick <garlick@llnl.gov>

	* : Continued audit for Debian [Arnaud Quette]
	- fix typo in man/powermand.8.in 
	- add config file path to scripts/powerman.init.in so it properly
	  handles startup when config file is missing
	- install sample powerman.conf as powerman.conf.example

2009-01-09 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.3.3

2008-12-21 Jim Garlick <garlick@llnl.gov>

	* man/*.\d.in : Standardize headers, and fix typos etc.

2008-12-02 Jim Garlick <garlick@llnl.gov>

	* : tag powerman-2.3.2

	* src/daemon.[ch], src/powermand.c:  Fix pidfile management.

	* man/* : Fix misc. typos.
